--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "all": "0.0.0",
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.14.0",
+    "express-session": "^1.15.6",
+    "favicon": "0.0.2",
     "mysql": "^2.15.0",
     "socket.io": "^1.7.4",
     "socket.js": "^0.1.4"
